Add files from other repo

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Hello, Rails!</h1>
+<h1>Hello, World!</h1>
 <%= link_to 'My Blog', controller: 'posts' %>
 <%= link_to 'New Post', new_post_path %>
 
-<h1>Listing Posts</h1>
+<h2>All Posts</h2>
 
 <table>
   <tr>
@@ -16,6 +16,9 @@
       <td><%= post.text %></td>
       <td><%= link_to 'Show', post_path(post) %></td>
       <td><%= link_to 'Edit', edit_post_path(post) %></td>
+      <td><%= link_to 'Delete', post_path(post),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
