--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,4 +8,10 @@
     <strong>Comment:</strong>
     <%= comment.content %>
   </p>
+
+  <p>
+    <%= link_to 'Delete Comment', [comment.post, comment],
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %>
+  </p>
 <% end %>
